# token2025-solana

./: .env.example  .gitignore  Anchor.toml  README.md  package.json
assets/: metadata.json
programs/token2025/: Cargo.toml
programs/token2025/src/: constants.rs  lib.rs
programs/token2025/src/instructions/: initialize.rs
scripts/: initialize.ts
scripts/idl/: token2025.json  token2025.ts
